fix: logo stretched in smaller size screens - close #3

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,7 @@
 
 .logo {
     height: 180px !important;
+    width: auto !important;
 }
 
 #root {
